# robotarm

./: adminPriv.php  disconnect.php  getJoints.asp  jointLoad.php  joint_load_manu.php  logInfo.php  middlepage.php  readme.md  retriveLog.php  robotinfo.php  robotreg.php  session_censur.php  switchMode.php  updateJoints.js  user.php  web.config
ROS/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ROS/cpr_mover_ws/devel/: .catkin  .rosinstall  setup.sh
ROS/peak-linux-driver-8.6.0/driver/: .cache.mk  .pcan.ko.cmd  .pcan.mod.o.cmd  .pcan.o.cmd  Makefile  modules.order  pcan.ko  pcan.mod.c  pcanfd.h  release_notes.txt
ROS/peak-linux-driver-8.6.0/driver/.tmp_versions/: pcan.mod
ROS/peak-linux-driver-8.6.0/driver/src/: .pcan_common.o.cmd  .pcan_dongle.o.cmd  .pcan_fifo.o.cmd  .pcan_filter.o.cmd  .pcan_fops.o.cmd  .pcan_isa.o.cmd  (+44 more)
ROS/peak-linux-driver-8.6.0/lib/: Makefile
ROS/peak-linux-driver-8.6.0/test/: Makefile  bitratetest  filtertest  pcan-settings  pcanfdtst  receivetest  transmitest
ROS/robot_pkg/devel/: .rosinstall
ROS/robot_pkg/src/robot_communications/: CMakeLists.txt  package.xml
ROS/robot_pkg/src/robot_communications/scripts/: mysql.connector
ROS/rviz_plugin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
remote_controling/robot_pkg/devel/: .catkin  setup.sh
website/: backup stuff.txt  connect.php  edituser.php  index.php  logging.php  logout.php  management.php  menu.php  purge.php  removeuser.php  settings.php  simulation.php  styles.css  switchRobot.php  test.html  updateUser.php  upload.php  user.php  userReg.php  video.js
(+17 files in other folders)
