<?xml version="1.0"?>
<package format="2">
  <name>robot_communications</name>
  <version>0.1.0</version>
  <description>Robot Communication Package</description>

  <maintainer email="johhki-4@student.ltu.se">Johannes Haakansson</maintainer>
  <license>LTU</license>
  <url type="website">http://boboIsBest.se</url>
  <author email="johhki-4@student.ltu.se">Johannes Haakansson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
